<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:gravity="center"
        android:orientation='horizontal'>

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showTitles" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showAuthors" />

    </RadioGroup>

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:drawableLeft="@android:drawable/ic_menu_preferences"
        android:onClick="onClickSettings"
        android:text="@string/settings" />

</LinearLayout>